syntax = "proto3";

package CIM.Grpc;
option go_package=".;cim";
option optimize_for = LITE_RUNTIME;

//import "CIM.Def.proto";
import "CIM.List.proto";
import "CIM.Login.proto";
import "CIM.Message.proto";
import "CIM.Group.proto";
import "CIM.Friend.proto";
import "Grpc.Def.proto";

// logic的grpc接口定义
service Logic {
    // 传递我方信息，双向GRPC
    rpc SayHello(Hello) returns(Empty){}

    // ping
    rpc Ping(CIM.Login.CIMHeartBeat) returns(CIM.Login.CIMHeartBeat) {}
    // 验证token
    rpc AuthToken(CIM.Login.CIMAuthTokenReq) returns(CIM.Login.CIMAuthTokenRsp) {}
    // 验证用户名和密码
    rpc Auth(CIM.Login.CIMAuthReq) returns(CIM.Login.CIMAuthRsp) {}

    // 查询会话列表
    rpc RecentContactSession(CIM.List.CIMRecentContactSessionReq) returns(CIM.List.CIMRecentContactSessionRsp) {}
    // 查询历史消息列表
    rpc GetMsgList(CIM.List.CIMGetMsgListReq) returns(CIM.List.CIMGetMsgListRsp) {}

    // 发消息
    rpc SendMsgData(CIM.Message.CIMMsgData) returns(CIM.Message.CIMMsgDataAck) {}
    // 已读消息回执
    rpc ReadAckMsgData(CIM.Message.CIMMsgDataReadAck) returns(Empty) {}

    // 创建用户
    rpc CreateUser(CreateUserAccountInfoReq) returns(CreateUserAccountInfoRsp){}
    // 查询用户昵称
    rpc QueryUserNickName(QueryUserNickNameReq) returns(QueryUserNickNameRsp){}
    // 查询随机推荐的系统已注册用户列表
    rpc QuerySystemUserRandomList(CIM.Friend.CIMFriendQueryUserListReq) returns(CIM.Friend.CIMFriendQueryUserListRsp){}
    // 生成随机昵称
    rpc GenerateNickName(GenerateNickNameReq) returns(GenerateNickNameRsp){}

    // 创建群
    rpc CreateGroup(CIM.Group.CIMGroupCreateReq) returns(CIM.Group.CIMGroupCreateRsp){}
    // 解散群
    rpc DisbandingGroup(CIM.Group.CIMGroupDisbandingReq) returns(CIM.Group.CIMGroupDisbandingRsp){}
    // 退出群
    rpc GroupExit(CIM.Group.CIMGroupExitReq) returns(CIM.Group.CIMGroupExitRsp){}
    // 查询群列表
    rpc QueryGroupList(CIM.Group.CIMGroupListReq) returns(CIM.Group.CIMGroupListRsp){}
    // 查询群组成员列表
    rpc QueryGroupMemberList(CIM.Group.CIMGroupMemberListReq)returns(CIM.Group.CIMGroupMemberListRsp){}
    // 查询群详情
    rpc QueryGroupInfo(CIM.Group.CIMGroupInfoReq) returns(CIM.Group.CIMGroupInfoRsp){}
    // 加人
    rpc GroupInviteMember(CIM.Group.CIMGroupInviteMemberReq) returns(CIM.Group.CIMGroupInviteMemberRsp){}
    // 踢人
    rpc GroupKickOutMember(CIM.Group.CIMGroupKickOutMemberReq) returns(CIM.Group.CIMGroupKickOutMemberRsp){}
}